kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cps-pack-parser
  labels:
    app: cps-pack-parser
spec:
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: cps-pack-parser-app
  template:
    metadata:
      labels:
        app: cps-pack-parser-app
    spec:
      containers:
        - name: cps-pack-parser
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/probation-services/cps-pack-parser:latest
          resources:
            limits:
              memory: "4000Mi"
              cpu: "2000m"
            requests:
              memory: "2000Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8000
