kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: cps-pack-parser-service
spec:
  selector:
    app: cps-pack-parser-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
